integration test: place and move new object
fix linter warnings
refactor settings grouped into record